--- a/.gitignore
+++ b/.gitignore
@@ -6,12 +6,15 @@ image_fixer.py
 link_fixer.py
 z.py
 test.py
+
 # Ignore the ".obsidian" folder
 /.obsidian
 
 # Ignore .DS_Store files
 .DS_Store
 
+# ignore ".trash" directory
+/.trash
 
 
 
