--- a/.gitignore
+++ b/.gitignore
@@ -1,18 +1,22 @@
-
+# Ignore gen files
+tools/
 dev/
 link.py
 unlink.py
 
-# Ignore the ".obsidian" folder
-/.obsidian
-
-# Ignore .DS_Store files (macOs)
-.DS_Store
-
-# ignore obsidian ".trash" directory
+# ignore ".trash" directory
 /.trash
 
+# Ignore my school stuff
+school/
 
+# Ignore the ".obsidian" folder
+/.obsidian
+*.obsidian/
+programming/app projects/twitter/.obsidian/workspace.json
+
+# Ignore .DS_Store files
+.DS_Store
 
 
 # Byte-compiled / optimized / DLL files
